fixes issue with cells collapsing on widow resize

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ p {
 }
 
 #gameboard {
-  width: 33%;
+  width: 500px;
   margin: 0 auto;
   margin-top: 25px;
 /*  margin-bottom: 100px;*/
